test/parsetest/invalid/paranthesis.java
class C {
  public void foo() {
    return a((a((a((a((a((a((a((a((a((a((a((a((a(())))))))))))))))))))))))));
  }
}
